--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,13 @@
         margin: 0;
       }
     </style>
+    <style>
+      .link{
+        text-decoration: none;
+        color: inherit;
+        
+      }
+    </style>
     <title>Blog React App</title>
   </head>
   <body>
