--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,8 @@
       .link{
         text-decoration: none;
         color: inherit;
-        
+        font-size: 18px;
+        font-style: inherit;
       }
     </style>
     <title>Blog React App</title>
